--- a/src/app/language/fa.json
+++ b/src/app/language/fa.json
@@ -1,25 +1,25 @@
 {
-    "External Player": "پلیر خارجی",
-    "Made with": "برنامه‌نویسی شده با",
-    "by a bunch of geeks from All Around The World": "توسط چند گیک کامپیوتر از همه جای دنیا",
+    "External Player": "پخش‌کنندهٔ خارجی",
+    "Made with": "ساخته شده با",
+    "by a bunch of geeks from All Around The World": "یک مشت گیک از سراسر جهان",
     "Initializing PopcornTime. Please Wait...": "...لطفا منتظر بمانید Popcorn Time در حال بارگذاری اولیه‌ی",
     "Status: Checking Database...": "وضعیت: بررسی پایگاه داده...",
     "Movies": "فیلم‌ها",
     "TV Series": "سریال‌ها",
-    "Anime": "اَنیمه",
-    "Genre": "نوع فیلم",
+    "Anime": "انیمه",
+    "Genre": "سبک",
     "All": "همه",
     "Action": "اکشن",
     "Adventure": "ماجراجویی",
-    "Animation": "انیمیشن",
+    "Animation": "پویانمایی",
     "Children": "کودکان",
     "Comedy": "کمدی",
     "Crime": "جنایی",
     "Documentary": "مستند",
     "Drama": "درام",
     "Family": "خانوادگی",
-    "Fantasy": "تخیلی",
-    "Game Show": "مسابقه",
+    "Fantasy": "فانتزی",
+    "Game Show": "بازی",
     "Home And Garden": "خانه و باغ",
     "Horror": "ترسناک",
     "Mini Series": "سریال‌های کوتاه",
@@ -29,7 +29,7 @@
     "Romance": "عاشقانه",
     "Science Fiction": "علمی-تخیلی",
     "Soap": "عامه‌پسند",
-    "Special Interest": "علاقه‌ی خاص",
+    "Special Interest": "علاقهٔ خاص",
     "Sport": "ورزشی",
     "Suspense": "تعلیق",
     "Talk Show": "گپ‌وگفت",
@@ -37,23 +37,23 @@
     "Western": "وسترن",
     "Sort by": "به ترتیب",
     "Popularity": "محبوبیت",
-    "Updated": "بروزرسانی",
+    "Updated": "به‌روز رسانی",
     "Year": "سال",
     "Name": "نام",
     "Search": "جست‌و‌جو",
     "Season": "فصل",
-    "Seasons": "فصل‌ها",
+    "Seasons": "‌ها",
     "Season %s": "%s فصل",
-    "Load More": "بیشتر",
+    "Load More": "بیش‌تر",
     "Saved": "ذخیره شد",
     "Settings": "تنظیمات",
     "Show advanced settings": "نمایش تنظیمات پیشرفته",
     "User Interface": "رابط کاربری",
-    "Default Language": "زبان پیش‌فرض",
-    "Theme": "تم",
-    "Start Screen": "صفحه‌ی شروع",
-    "Favorites": "بوکمارک‌ها",
-    "Show rating over covers": "نمایش امتیاز بر روی پوسترها",
+    "Default Language": "زبان پیش‌گزیده",
+    "Theme": "زمینه",
+    "Start Screen": "صفحهٔٔ شروع",
+    "Favorites": "پسندها",
+    "Show rating over covers": "نمایش امتیاز روی پوسترها",
     "Always On Top": "همیشه در پیش‌زمینه",
     "Watched Items": "آیتم‌های دیده شده",
     "Show": "نمایان",
